organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
.SearchView {
    display: flex;
    flex-direction: column;
    gap: 32px;
}

.Title {
    font-size: 28px;
    font-style: normal;
    font-weight: 500;
    line-height: 33px;
}

.Section {
    /* Layout */
    display: flex;
    flex-direction: row;
    gap: 16px;
}

.SectionTitle {
    margin-bottom: 16px;
}

.SectionTitle h2 {
    flex-grow: 1;

    color: var(--color-primary-blue);
    font-feature-settings: 'clig' off, 'liga' off;
    font-size: 20px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
}

.KohderyhmaSelections {
    /* Layout */
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    gap: 16px;
}

.KohderyhmaColumn {
    /* Layout */
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 16px;
}

.Kohderyhma {
    /* Layout */
    display: flex;
    width: 372px;
    padding: 24px;
    flex-direction: column;
    align-items: flex-start;
    gap: 8px;

    /* Style */
    color: var(--color-neutral-black);
    border-radius: 3px;
    background: #fff;
    box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.17);
}

.Kohderyhma.Selected {
    border-radius: 3px;
    border: 2px solid var(--color-primary-blue);
    background: #fff;
    box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.17);
}
.Kohderyhma.Selected h3 {
    color: var(--color-primary-blue);
}

.Kohderyhma.Disabled {
    border-radius: 3px;
    border: 2px solid var(--color-gray-gray-lighten-3);
    background: #fff;
    box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.17);

    color: var(--color-gray-gray-lighten-1);
}
.Kohderyhma.Disabled h3 {
    color: var(--color-gray-gray-lighten-1);
}

.KohderyhmaOtsikko {
    display: flex;
    width: 324px;
    align-items: flex-start;
    gap: 16px;
}

.KohderyhmaOtsikko h3 {
    /* Medium 20 */
    font-size: 20px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
}

.KohderyhmaKuvaus {
    /* Layout */
    display: flex;
    padding-left: 36px;
    align-items: center;
    gap: 8px;
    align-self: stretch;

    /* Regular 14 */
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: 21px; /* 150% */
    letter-spacing: 0.035px;
}

.Rajaukset {
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.ErrorRow {
    align-self: baseline;
}

.ButtonRow {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 16px;
}
.ButtonRow button[variant='outlined'] {
    background-color: white;
}

.SelectAll {
    font-weight: 500;
}

.RajausRyhmat {
    border-bottom: 1px solid var(--color-gray-gray-lighten-3);
    padding-bottom: 24px;
    font-weight: 500;
}

.RajausRyhmat label {
    margin-right: 16px;
}

.LoadingOverlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.FlexRow {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.FlexRow .FlexGrow {
    flex-grow: 1;
}

.FlexCol {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.OppilaitostyypitList {
    column-count: 3;
}

